@startuml
!include <office/Concepts/globe_internet>
!include <office/Concepts/documents>
!include <office/Users/user>
!include style.puml

skinparam {
    Shadowing false
    ArrowFontSize 12
}

title "TutorTrack Architecture Diagram"

package "Main Components" <<Rectangle>> {
    class "UI" as UI UI_COLOR
    class "Logic" as Logic LOGIC_COLOR
    class "Storage" as Storage STORAGE_COLOR
    class "Model" as Model MODEL_COLOR
    class "Main" as Main #grey
}

class "<$user>\nUser" as User MODEL_COLOR_T2
class "<$documents>\nData File" as File UI_COLOR_T1

' Component Relationships
Main --> UI : launches
Main --> Logic : launches
Main --> Storage : launches
Main --> Model : accesses

UI -> Logic : executes\ncommands
UI -> Model : observes
Logic -> Storage : saves/loads
Logic -> Model : modifies

Storage ..> Model : contains\npersisted data
Storage ..> File : reads/writes\nJSON

User ..> UI : interacts with

note right of Storage
  <b>Data Flow:</b>
  • JSON format
  • Auto-saves on changes
end note

note top of Logic
  <b>Command Processing:</b>
  • Parses input
  • Executes logic
  • Returns results
end note

legend right
  <b>Color Legend:</b>
  <$globe_internet> = External Interaction
  <$documents> = Data Storage
  <$user> = Human Actor
end legend
@enduml
